--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 permalink:           pretty
 
 # Setup
-title:               Steve Gabriel
-tagline:             'A Jekyll theme'
+title:               Air Travel
+tagline:             'Steve Gabriel'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 http://lanyon.getpoole.com
 baseurl:             '/airtravel'
